GS-13245: Profile Redesign Walton: FRONT-END bugs for Internet Explorer(missing border)

--- a/src/webapp/res/css/02_module/mod_skins-v1.css
+++ b/src/webapp/res/css/02_module/mod_skins-v1.css
@@ -390,7 +390,7 @@ General comments:
 /* ------------- infinite carousel 9 ------------- */
 
 .infiniteCarousel9{
-    width: 414px;
+    width: 413px;
     height: 87px;
     position: relative;
     margin:0;
